--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,43 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Homework-12</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <a class="nav-logo" href="./index.html" aria-label="Site logo">
+            <svg class="nav-logo-icon" width="100" height="30">
+              <use href="./img/logo.svg"></use>
+            </svg>
+          </a>
+        </nav>
+      </div>
+    </header>
 
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
+      <form class="form">
+        <label>
+          <input
+            type="text"
+            name="search-text"
+            placeholder="Search images..."
+            required
+          />
+        </label>
+        <button class="submit-btn" type="submit">Search</button>
+      </form>
 
-    <load src="./partials/footer.html" />
+      <div class="loader-box hidden">
+        <span class="loader"></span>
+      </div>
+
+      <ul id="gallery" class="gallery"></ul>
+
+      <button class="load-more-btn hidden" type="button">Load more</button>
+    </main>
 
     <script type="module" src="./main.js"></script>
   </body>
